--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-table": "^8.11.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
